--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       text-align: center;
     }
     .questions-section {
-      width: 300px;
+      width: 60%;
       padding-left: 20px;
     }
     #mayor-gif {
