bulle largeur longueur texte

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     }
     .question-btn {
       display: block;
-      width: 100%;
+      /*width: 100%;*/
       margin-bottom: 10px;
       padding: 10px;
       background: #FFEB3B;
