show task popup

--- a/index.html
+++ b/index.html
@@ -73,5 +73,14 @@
   </div>
 
   <script src="script.js"></script>
+
+  <div id="tasks-popup" class="popup-container hidden">
+    <div class="popup-content">
+      <h3>Liste complète des tâches</h3>
+      <ul id="tasks-list"></ul>
+      <button class="close-popup">Fermer</button>
+    </div>
+  </div>
+  
 </body>
 </html>
