--- a/index.html
+++ b/index.html
@@ -3,84 +3,39 @@
 <head>
   <meta charset="UTF-8">
   <title>Dialogue avec le Maire</title>
-  <style>
-    body {
-      font-family: 'Comic Sans MS', cursive;
-      background-color: #f0f8ff;
-      margin: 0;
-      padding: 20px;
-    }
-    .container {
-      display: flex;
-      max-width: 1000px;
-      margin: 0 auto;
-    }
-    .mayor-section {
-      flex: 1;
-      text-align: center;
-    }
-    .questions-section {
-      width: 45%;
-      padding-left: 20px;
-    }
-    #mayor-gif {
-      max-width: 100%;
-      max-height: 400px;
-      border: 3px solid #333;
-      border-radius: 10px;
-    }
-    .question-btn {
-      display: block;
-      /*width: 100%;*/
-      margin-bottom: 10px;
-      padding: 10px;
-      background: #FFEB3B;
-      border: 2px solid #333;
-      border-radius: 8px;
-      font-family: 'Comic Sans MS', cursive;
-      font-size: 16px;
-      cursor: pointer;
-      text-align: left;
-      box-shadow: 3px 3px 0 #999;
-    }
-    .question-btn:hover {
-      background: #FFD700;
-    }
-    #dialogue-box {
-      background: white;
-      border: 2px solid #333;
-      border-radius: 10px;
-      padding: 15px;
-      margin-top: 20px;
-      min-height: 100px;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Comic+Neue&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h1 style="text-align: center;">Projet Résidence Étudiante</h1>
-  
-  <div class="container">
-    <div class="mayor-section">
-      <img id="mayor-gif" src="maire-silent.gif" alt="Maire">
-      <div id="dialogue-box">
-        <p>Cliquez sur une question à droite</p>
-      </div>
-    </div>
+  <div class="comic-container">
+    <h1 class="comic-title">PROJET RÉSIDENCE ÉTUDIANTE</h1>
     
-    <div class="questions-section">
-      <div id="questions-container"></div>
+    <div class="main-content">
+      <!-- Colonne des questions -->
+      <div class="questions-column">
+        <div id="questions-container" class="questions-container"></div>
+      </div>
+      
+      <!-- Zone du maire -->
+      <div class="mayor-scene">
+        <div id="response-bubble" class="bubble response-bubble hidden">
+          <div id="response-content" class="bubble-content"></div>
+          <div class="bubble-tail"></div>
+        </div>
+        <img id="mayor-gif" src="maire-silent.gif" alt="Maire" class="mayor-gif">
+      </div>
     </div>
   </div>
 
-  <script src="script.js"></script>
-
+  <!-- Popup des tâches -->
   <div id="tasks-popup" class="popup-container hidden">
     <div class="popup-content">
-      <h3>Liste complète des tâches</h3>
+      <h3>📋 Liste complète des tâches</h3>
       <ul id="tasks-list"></ul>
       <button class="close-popup">Fermer</button>
     </div>
   </div>
-  
+
+  <script src="script.js"></script>
 </body>
 </html>
