recuperation COMMIT perte historique

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
   </div>
 
-  <!-- Popup des tâches -->
+  <!-- Popup des tâches à revoir-->
   <div id="tasks-popup" class="popup-container hidden">
     <div class="popup-content">
       <h3>📋 Liste complète des tâches</h3>
