--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Dialogue avec le Maire</title>
+  <title>2nde réunion avec Mr le Maire</title>
   <style>
     body {
       font-family: 'Comic Sans MS', cursive;
@@ -20,7 +20,7 @@
       text-align: center;
     }
     .questions-section {
-      width: 60%;
+      width: 46%;
       padding-left: 20px;
     }
     #mayor-gif {
@@ -57,7 +57,10 @@
   </style>
 </head>
 <body>
-  <h1 style="text-align: center;">Projet Résidence Étudiante</h1>
+  SEQUENCE 4 - SEANCE 1 - ACTIVITE 2.2
+  <h1 style="text-align: center;">
+    Projet Résidence Étudiante - 2nde réunion avec Mr le Maire
+  </h1>
   
   <div class="container">
     <div class="mayor-section">
